fix product title not wrapping

--- a/themes/origins/styles/product-card.scss
+++ b/themes/origins/styles/product-card.scss
@@ -63,6 +63,7 @@
 
     .title {
       width: fit-content;
+      max-width: 100%;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
